# sample-scrapy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrapy-check.yml
horse_racing_crawler/: scrapy.cfg
horse_racing_crawler/horse_racing_crawler/: __init__.py  feed_storage.py  httpcache.py  items.py  settings.py
horse_racing_crawler/horse_racing_crawler/spiders/: __init__.py  netkeiba_spider.py
