[tool.poetry]
name = "sample-scrapy"
version = "0.1.0-dev"
description = "Scrapy project for netkeiba shutuba pages"
authors = ["u6k <u6k.apps@gmail.com>"]
readme = "README.md"
packages = [{ include = "horse_racing_crawler", from = "horse_racing_crawler" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scrapy = "2.11.2"
boto3 = "1.34.162"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.8"

[tool.ruff]
line-length = 320
src = ["horse_racing_crawler"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
